<resources>
    <string name="app_name">Booking</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="popular_categories">Popular Categories</string>
    <string name="recommended">Recommended</string>
    <string name="see_all">See All</string>
    <string name="new_york_ny">New York, NY</string>
    <string name="flight">Flights</string>
    <string name="hotels">Hotels</string>
    <string name="visa">Visa</string>
    <string name="buses">Buses</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="mountain_safari">Mountain Safari</string>
    <string name="about_the_trip">About the trip</string>
    <string name="book_now">Book Now</string>
</resources>