<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewmodel"
            type="com.tvr.booking.features.home.HomeViewModel" />

        <variable
            name="activity"
            type="android.app.Activity" />

        <import type="android.view.View" />

    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/dark"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:padding="20dp"
            tools:context=".features.home.HomeFragment">

            <!--top part-->
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/category"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/avatar_bg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="@+id/imageView"
                app:layout_constraintEnd_toStartOf="@+id/imageView2"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="@+id/imageView">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/location" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/rubik_regular"
                    android:text="@string/new_york_ny"
                    android:textColor="@color/grey" />
            </LinearLayout>

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/avatar"
                app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                app:layout_constraintEnd_toEndOf="@+id/imageView2"
                app:layout_constraintStart_toStartOf="@+id/imageView2"
                app:layout_constraintTop_toTopOf="@+id/imageView2" />

            <!--search-->
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/appCompatEditText"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/rounded_bg"
                android:drawableStart="@drawable/search"
                android:drawablePadding="10dp"
                android:drawableTint="@color/grey"
                android:fontFamily="@font/rubik_regular"
                android:hint="@string/search"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColorHint="@color/grey"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                tools:layout_editor_absoluteX="20dp" />

            <!--Popular categories-->
            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/rubik_medium"
                android:text="@string/popular_categories"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@+id/appCompatEditText"
                app:layout_constraintStart_toStartOf="@+id/appCompatEditText"
                app:layout_constraintTop_toBottomOf="@+id/appCompatEditText" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:adapter="@{viewmodel.categoryAdapter}"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                tools:listitem="@layout/item_category" />


            <!--Recommended-->
            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="45dp"
                android:fontFamily="@font/rubik_medium"
                android:text="@string/recommended"
                android:textColor="@color/white"
                android:visibility="@{viewmodel.progressBarVisibility ? View.GONE : View.VISIBLE}"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/recyclerView"
                app:layout_constraintTop_toBottomOf="@+id/recyclerView" />


            <TextView
                android:id="@+id/seeAllTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="45dp"
                android:fontFamily="@font/rubik_medium"
                android:text="@string/see_all"
                android:visibility="@{viewmodel.progressBarVisibility ? View.GONE : View.VISIBLE}"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/recyclerView"
                app:layout_constraintTop_toBottomOf="@+id/recyclerView" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:adapter="@{viewmodel.propertyAdapter}"
                android:orientation="horizontal"
                tools:listitem="@layout/item_property"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="@+id/seeAllTv"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:indeterminateTint="@color/white"
                android:indeterminateTintMode="src_atop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                android:visibility="@{viewmodel.progressBarVisibility ? View.VISIBLE : View.GONE}"
                tools:visibility="visible"
                />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/red"
                android:textSize="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                tools:text="Error"
                android:text="@{viewmodel.error}"
                tools:visibility="visible"
                android:gravity="center"
                android:visibility="@{viewmodel.error.length()>0 ? View.VISIBLE : View.GONE}"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>